Fix wrap bug in tag display
- Ensure tag `badges` wrap correctly
- Update dependencies to latest versions

--- a/spm_frontend/react/src/css/data-table.css
+++ b/spm_frontend/react/src/css/data-table.css
@@ -127,163 +127,151 @@ div.message-card {
   font-size: 0.8em;
 }
 
+/* TAGS */
+
+td.tags .badge-warning {
+  padding: 1.5vmin;
+  margin: 1vmin;
+}
+
+td.tags span {
+  text-align: left;
+}
+
+td.tags span button {
+  margin-left: 2vmin!important;
+}
+
 /* LIGHT MODE */
 
-div.light 
-  div.data-table {
-    min-height: 768px;
-    font-size: 1vm;
-  }
+div.light div.data-table {
+  min-height: 768px;
+  font-size: 1vm;
+}
 
-div.light 
-table {
-    background-color: #d4e0ff !important;
-    font-weight: bold;
-    color: rgb(19, 19, 19);
-  }
+div.light table {
+  background-color: #d4e0ff !important;
+  font-weight: bold;
+  color: rgb(19, 19, 19);
+}
 
-div.light 
-table.table-bordered td,
-div.light 
-table.table-bordered th {
-    border: 1px solid #001e00 !important;
-  }
+div.light table.table-bordered td,
+div.light table.table-bordered th {
+  border: 1px solid #001e00 !important;
+}
 
-  div.light 
-  thead th {
-    padding: 1em !important;
-    font-size: 1.7vm;
-    color: #001e00;
-  }
+div.light thead th {
+  padding: 1em !important;
+  font-size: 1.7vm;
+  color: #001e00;
+}
 
-  div.light 
-  td {
-    color: #001e00 !important;
-    padding: 0.5em !important;
-    vertical-align: middle !important;
-  }
+div.light td {
+  color: #001e00 !important;
+  padding: 0.5em !important;
+  vertical-align: middle !important;
+}
 
-div.light 
-td.action-col,
-div.light 
-th.action-col {
-    color: #001e00 !important;
-  }
+div.light td.action-col,
+div.light th.action-col {
+  color: #001e00 !important;
+}
 
-div.light 
-table td.table-small-font {
-    font-size: 0.8em;
-  }
+div.light table td.table-small-font {
+  font-size: 0.8em;
+}
 
-div.light 
-table.stockTable-disabled,
-div.light 
-table.stockTable-disabled input {
-    font-size: 0.8em;
-  }
+div.light table.stockTable-disabled,
+div.light table.stockTable-disabled input {
+  font-size: 0.8em;
+}
 
-div.light 
-table.stockTable-disabled input {
-    background-color: lightslategrey !important;
-    border: none;
-  }
+div.light table.stockTable-disabled input {
+  background-color: lightslategrey !important;
+  border: none;
+}
 
-div.light 
-table.transferTable td,
-div.light 
-table.transferTable {
-    background-color: slateblue;
-    font-size: 1.1em;
-  }
+div.light table.transferTable td,
+div.light table.transferTable {
+  background-color: slateblue;
+  font-size: 1.1em;
+}
 
-div.light 
-table.transferTable input {
-    font-size: 1.1em;
-  }
+div.light table.transferTable input {
+  font-size: 1.1em;
+}
 
-div.light 
-caption {
-    font-size: 0.8em;
-    text-align: right;
-    color: orange;
-  }
+div.light caption {
+  font-size: 0.8em;
+  text-align: right;
+  color: orange;
+}
 
-div.light 
-input.search {
-    border: 2px orange !important;
-    background-color: #d4e0ff;
-    color: black !important;
-    font-weight: bold;
-  }
+div.light input.search {
+  border: 2px orange !important;
+  background-color: #d4e0ff;
+  color: black !important;
+  font-weight: bold;
+}
 
-div.light 
-input.search::placeholder {
-    color: darkslategray !important;
-    font-weight: bold;
-  }
+div.light input.search::placeholder {
+  color: darkslategray !important;
+  font-weight: bold;
+}
 
-div.light 
-ul {
-    list-style-type: None !important;
-    padding: 0 !important;
-    font-size: 1.5rem;
-  }
+div.light ul {
+  list-style-type: None !important;
+  padding: 0 !important;
+  font-size: 1.5rem;
+}
 
-div.light 
-.Modal {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-    bottom: 40px;
-    background-color: papayawhip;
-  }
+div.light .Modal {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  background-color: papayawhip;
+}
 
-div.light 
-.Overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rebeccapurple;
-  }
+div.light .Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rebeccapurple;
+}
 
-div.light 
-td li button {
-    border-radius: 22px !important;
-  }
+div.light td li button {
+  border-radius: 22px !important;
+}
 
-div.light 
-button.table-btn {
-    transition: all 200ms ease-in-out;
-  }
+div.light button.table-btn {
+  transition: all 200ms ease-in-out;
+}
 
-div.light 
-button.table-btn:hover {
-    transform: scale(1.25);
-    z-index: 10;
-  }
+div.light button.table-btn:hover {
+  transform: scale(1.25);
+  z-index: 10;
+}
 
-div.light 
-div.message-card {
-    margin: 0 0 1em 0;
-    text-align: center;
-    background-color: #023600;
-    border: 1px solid black;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;
-  }
+div.light div.message-card {
+  margin: 0 0 1em 0;
+  text-align: center;
+  background-color: #023600;
+  border: 1px solid black;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
 
-div.light 
-.alert {
-    font-weight: bold;
-    font-size: 0.8em;
-  }
+div.light .alert {
+  font-weight: bold;
+  font-size: 0.8em;
+}
 
-div.light 
-.badge-warning {
-    background-color: #fffebc;
-    color: black;
-  }
+div.light td.tags .badge-warning {
+  background-color: #fffebc;
+  color: black;
+}
